--- a/app/views/appointment_mailer/confirmation.text.erb
+++ b/app/views/appointment_mailer/confirmation.text.erb
@@ -1,48 +1,8 @@
-You've successfully booked an appointment
+We've booked your appointment
 
 Dear <%= @appointment.first_name %>,
 
-Thank you for booking a telephone guidance appointment with Pension Wise.
-Your appointment is confirmed for:
+Thank you for booking a Pension Wise phone appointment.
 
-  Date
-    <%= @appointment.start_at.to_date.to_s(:govuk_date) %>
-
-  Time
-    <%= @appointment.start_at.to_time.to_s(:govuk_time) %>
-
-  Appointment lasts
-    45 to 60 minutes
-
-  Your contact number
-    <%= @appointment.phone %>
-
-  Your memorable word
-    <%= @appointment.memorable_word(obscure: true) %>
-
-  Your reference number
-    #<%= @appointment.id %>
-
-A trained guidance specialist will call you on the number above. They'll repeat the
-memorable word to you so you know you're speaking to Pension Wise.
-
-If you don't answer the call, you'll need to book another appointment.
-
-To cancel or change your appointment, or if any of the information above isn't correct,
-call 0800 138 3944 or reply to this email.
-
-Preparing for your appointment
-
-To make your appointment as useful as possible, it would be helpful to know the following information:
-
-  - the value of your pension pot(s) - check your pension paperwork or ask your provider
-  - an estimate of your State Pension - call the Future Pension Centre on 0345 3000 168 for a State Pension statement
-  - any special arrangements attached to your pension pot, eg a guaranteed annuity rate or a guaranteed pot value at
-    a certain time - ask your provider
-
-Think about your financial circumstances in general and plans for retirement, eg:
-
-  - sources of income like salary, benefits, savings, investments
-  - debts and repayments you might have
-  - when you want to stop working
-  - if you want a fixed or flexible income in retirement
+<%= render 'shared/email/appointment_details' %>
+<%= render 'shared/email/preparing_for_appointment' %>
