--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -1,17 +1,21 @@
-<% if details %>
-  <a class="activity list-group-item t-activity" href="<%= edit_appointment_path(activity.appointment) %>">
-<% else %>
-  <li class="activity list-group-item t-activity <%= 't-hidden-activity activity--hideable activity--hide' if hide %>" data-activity-id="<%= activity.id %>">
-<% end %>
-    <div class="activity-details">
-      <%= content_for(:activity_message) %>
-      <%= render('activities/details', appointment: activity.appointment) if details %>
-    </div>
-    <div class="activity-badge">
-      <em class="badge"><%= activity.created_at.in_time_zone('London').to_s(:govuk_date_short) %> (<%= time_ago_in_words(activity.created_at.in_time_zone('London'))%> ago)</em>
-    </div>
-<% if details %>
-  </a>
-<% else %>
-  </li>
-<% end %>
+<% @priority = [1,2,3,4].sample %>
+<% @resolved = [true,false].sample %>
+<li class="activity list-group-item t-activity <%= 't-hidden-activity activity--hideable activity--hide' if hide %><% if @priority == 1 && @resolved %> activity--priority-resolved<% end %><% if @priority == 1 && !@resolved %> activity--priority-unresolved<% end %>" data-activity-id="<%= activity.id %>">
+  <% if details %>
+    <a href="<%= edit_appointment_path(activity.appointment) %>" class="activity__link">
+  <% end %>
+    <%= content_for(:activity_message) %>
+  <% if details %>
+    </a>
+  <% end %>
+  <%= render('activities/details', appointment: activity.appointment) if details %>
+  <span class="activity__date">
+    <%= activity.created_at.in_time_zone('London').to_s(:govuk_date_short) %> (<%= time_ago_in_words(activity.created_at.in_time_zone('London'))%> ago)
+    <% if @priority == 1 %>
+      · <span class="activity__priority<% if @resolved %> activity__priority--resolved<% end %>">Priority</span>
+    <% end %>
+  </span>
+  <% if @priority == 1 && !@resolved %>
+    <a class="activity__resolve btn btn-success btn-sm" href="#">Resolve</a>
+  <% end %>
+</li>
