--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -6,9 +6,9 @@
 <div class="row t-activity-feed">
   <div class="col-md-12 border-bottom">
     <div class="activity-feed activity-feed--with-links">
-      <div class="list-group" data-module="activity-feed" data-config='{"event": "guider_activity_<%= current_user.id %>"}'>
+      <ol class="list-group" data-module="activity-feed" data-config='{"event": "guider_activity_<%= current_user.id %>"}'>
         <%= render(@activities, details: true, hide: false) %>
-      </div>
+      </ol>
     </div>
     <% if @activities.empty? %>
       <div class="panel panel-default">
