--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Allocations')) %>
 <%= breadcrumb( { title: 'Allocations' } ) %>
 
 <h1 class="sr-only">Allocations</h1>
