--- a/app/views/appointment_reports/new.html.erb
+++ b/app/views/appointment_reports/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Generate an appointment report')) %>
 <%= breadcrumb( { title: 'Generate an appointment report' } ) %>
 
 <h1>Generate an appointment report</h1>
