--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: "Edit appointment for #{@appointment.name}")) %>
 <%= breadcrumb(
   breadcrumb_part_for_previous_page,
   { title: "Edit appointment for #{@appointment.name}" }
