--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Book an appointment')) %>
 <%= breadcrumb({ title: 'Book an appointment' }) %>
 
 <h1>Book an appointment</h1>
