--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Confirm appointment details')) %>
 <%=
   breadcrumb(
     { title: 'Book an appointment', path: new_appointment_path },
