--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Appointment search')) %>
 <%= breadcrumb( { title: 'Appointment search' } ) %>
 
 <h1>Appointment search</h1>
