--- a/app/views/company_calendars/show.html.erb
+++ b/app/views/company_calendars/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Company appointments')) %>
 <%= breadcrumb( { title: 'Company appointments' } ) %>
 
 <h1>Company appointments</h1>
