--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Edit holiday')) %>
 <%= breadcrumb(
   { title: 'Holidays', path: holidays_path },
   { title: 'Edit holiday' }
