--- a/app/views/my_appointments/show.html.erb
+++ b/app/views/my_appointments/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'My appointments')) %>
 <%= breadcrumb( { title: 'My appointments' } ) %>
 
 <h1>My appointments</h1>
