--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Manage guiders')) %>
 <%= breadcrumb( { title: 'Manage guiders' } ) %>
 
 <h1>Manage guiders</h1>
