--- a/app/views/users/sort.html.erb
+++ b/app/views/users/sort.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Guider display order')) %>
 <%= breadcrumb( { title: 'Guider display order' } ) %>
 
 <h1>Guider display order</h1>
