--- a/app/views/utilisation_reports/new.html.erb
+++ b/app/views/utilisation_reports/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Generate a utilisation report')) %>
 <%= breadcrumb( { title: 'Generate a utilisation report' } ) %>
 
 <h1>Generate a utilisation report</h1>
