--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Manage groups')) %>
 <%= breadcrumb(
   { title: 'Manage guiders', path: users_path },
   { title: 'Manage groups' }
