--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: 'Holidays')) %>
 <%= breadcrumb( { title: 'Holidays' } ) %>
 
 <h1>Holidays</h1>
