--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:page_title, t('service.title', page_title: "Manage schedules for #{@guider.name}")) %>
 <%= breadcrumb(
   { title: 'Manage guiders', path: users_path },
   { title: "Manage schedules for #{@guider.name}" }
