Make appointment search date read only
Switch feature to js and use javascript to set the date
following warnings from Capybara about setting the value
of a read only field.

--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -16,6 +16,7 @@
         class: 't-date-range appointment-search__date-range form-control',
         use_label: false,
         placeholder: 'Appointment date range',
+        readonly: true,
         data: {
           module: 'date-range-picker',
           config: {
