Get resolve button to work for high priority activity

--- a/app/assets/stylesheets/components/_activity.scss
+++ b/app/assets/stylesheets/components/_activity.scss
@@ -58,6 +58,10 @@
   top: 14px;
 }
 
+.activity__resolve-message {
+  margin-left: 18px;
+}
+
 .activity-item {
   .dropdown-menu & {
     width: 280px;
