Get dropdown of high priority messages to work
- re-worked how we monitor for resolving of activities
  called once on the page and monitor current and future
  versions of the 'resolve' button

--- a/app/assets/stylesheets/components/_activity.scss
+++ b/app/assets/stylesheets/components/_activity.scss
@@ -1,12 +1,26 @@
 .activity--priority-unresolved {
   border-left: 5px solid $brand-danger;
-  padding-left: 10px;
   padding-right: 90px;
+
+  .activity__inner {
+    margin-left: -5px;
+
+    .glyphicon {
+      left: 6px;
+    }
+  }
 }
 
 .activity--priority-resolved {
   border-left: 5px solid $brand-success;
-  padding-left: 10px;
+
+  .activity__inner {
+    margin-left: -5px;
+
+    .glyphicon {
+      left: 6px;
+    }
+  }
 }
 
 .activity--hide {
@@ -20,6 +34,17 @@
   &:visited {
     text-decoration: none;
     color: $color-black;
+  }
+
+  &:hover,
+  &:focus {
+    &::after {
+      background: transparentize($color-black, .9);
+    }
+
+    .dropdown-menu & {
+      background: transparent;
+    }
   }
 
   &::after {
@@ -44,7 +69,6 @@
   color: $color-dove-gray;
   display: block;
   font-size: 80%;
-  margin-left: 18px;
 }
 
 .activity__date--dropdown {
@@ -58,15 +82,22 @@
   top: 14px;
 }
 
-.activity__resolve-message {
-  margin-left: 18px;
+.activity-dropdown-menu {
+  padding: 0;
+  left: auto;
+  right: 0;
 }
 
-.activity-item {
-  .dropdown-menu & {
-    width: 280px;
+.activity {
+  .glyphicon {
+    position: absolute;
+    top: .9em;
+    left: 10px;
+  }
+
+  .activity-dropdown-menu & {
     border-bottom: 1px solid $color-silver;
-    padding: .5em 0;
+    width: 360px;
 
     .activity-details {
       white-space: normal;
@@ -77,13 +108,33 @@
     }
 
     a {
-      padding: 3px 10px;
       white-space: normal;
     }
-
-    &:last-child {
-      border-bottom: 0;
-      padding: .5em 0 0;
-    }
   }
+}
+
+.activity--none {
+  padding: 10px;
+}
+
+.activity__resolve-message {
+  display: inline-block;
+  margin-top: 5px;
+}
+
+.activity__inner {
+  padding-left: 16px;
+}
+
+.activity--view-all {
+  border-bottom: 0;
+  padding: .5em 0;
+
+  .glyphicon {
+    position: static;
+  }
+}
+
+.activity__form {
+  margin: 0;
 }
