--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -1,7 +1,10 @@
 <li class="activity list-group-item t-activity
   <%= 't-hidden-activity activity--hideable activity--hide' if hide %>
-  <% if activity.high_priority? && activity.resolved? %> activity--priority-resolved<% end %>
-  <% if activity.high_priority? && !activity.resolved? %> activity--priority-unresolved<% end %>
+  <% if activity.high_priority? %>
+    t-high-priority-activity
+    t-<%= 'un' if !activity.resolved? %>resolved-activity
+    activity--priority-<%= 'un' if !activity.resolved? %>resolved
+  <% end %>
 " data-activity-id="<%= activity.id %>">
   <div class="activity__inner">
     <% if details %>
@@ -23,7 +26,7 @@
       <%= button_to(
         'Resolve',
         resolve_activity_path(activity.id),
-        class: 'activity__resolve btn btn-success btn-sm',
+        class: 'activity__resolve btn btn-success btn-sm t-resolve-activity',
         method: :patch,
         remote: true,
         form_class: 'activity__form'
