--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -62,10 +62,10 @@
     <% end %>
     <ul class="activity-dropdown-menu dropdown-menu js-high-priority-dropdown">
       <li class="activity">
-        <div class="calendar-loading-spinner">
-          <div class="calendar-loading-spinner__bounce calendar-loading-spinner__bounce--1"></div>
-          <div class="calendar-loading-spinner__bounce calendar-loading-spinner__bounce--2"></div>
-          <div class="calendar-loading-spinner__bounce"></div>
+        <div class="loading-spinner">
+          <div class="loading-spinner__bounce loading-spinner__bounce--1"></div>
+          <div class="loading-spinner__bounce loading-spinner__bounce--2"></div>
+          <div class="loading-spinner__bounce"></div>
         </div>
       </li>
       <li class="activity activity--view-all">
