Allow management of appointment type
This gives agents and others the ability to specify the type of
appointment they expect the customer to have. This will be fed to the
summary document generator so TAP then becomes the canonical source for
this piece of information.

--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -23,5 +23,11 @@
         { class: 't-status' }
       ) if defined?(edit) && edit
     %>
+
+    <div class="form-group">
+      <p><strong>Type of appointment</strong></p>
+      <%= f.radio_button :type_of_appointment, 'standard', label: 'Appointment for customers aged 55+', class: 't-type-of-appointment-standard' %>
+      <%= f.radio_button :type_of_appointment, '50-54', label: 'Appointment for customers aged 50-54', class: 't-type-of-appointment-50-54' %>
+    </div>
   </div>
 </div>
