--- a/app/views/activities/_audit_activity.html.erb
+++ b/app/views/activities/_audit_activity.html.erb
@@ -3,4 +3,4 @@
   <strong><%= audit_activity.user_name %></strong>
   changed the <%= audit_activity.message %>
 <% end %>
-<%= render 'activities/activity', activity: audit_activity, details: details, hide: hide %>
+<%= render 'activities/activity', activity: audit_activity, details: details, more: true, hide: hide %>
