--- a/app/views/shared/_calendar_filter.html.erb
+++ b/app/views/shared/_calendar_filter.html.erb
@@ -9,4 +9,6 @@
       data: { module: 'advanced-select', placeholder: 'Guider or Group' }
     )
   %>
+  <hr>
+  <label>Show bookable slots over holidays <input type="checkbox" class="js-booking-slot-toggle"></label>
 </div>
