--- a/app/views/changes/index.html.erb
+++ b/app/views/changes/index.html.erb
@@ -6,29 +6,27 @@
 
 <h1>Activities for <%= @appointment.name %> <span class="text-muted"><span class="sr-only">Booking reference </span>#<%= @appointment.id %></span></h1>
 
-<% @appointment.audits.reverse.each do |audit| %>
-  <% unless audit.action == 'create' %>
-    <table class="table table-striped table-bordered">
-    <col width="20%" />
-    <col width="40%" />
-    <col width="40%" />
-    <caption><%= audit.user.name %> changed the <%= audit.audited_changes.keys.map(&:humanize).to_sentence.downcase %> on <%= audit.created_at.in_time_zone('London').to_s(:govuk_date_short) %></caption>
-    <thead>
-      <tr>
-        <th>Field</th>
-        <th>Before</th>
-        <th>After</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% audit.audited_changes.each do |key, value| %>
-      <tr>
-        <td><%= key.humanize %></td>
-        <td><%= value.first.to_s.empty? ? '-' : value.first.to_s.humanize %></td>
-        <td><%= value.last.to_s.empty? ? '-' : value.last.to_s.humanize %></td>
-      </tr>
-      <% end %>
-    </tbody>
-    </table>
-  <% end %>
+<% @audits.each do |audit| %>
+  <table class="table table-striped table-bordered">
+  <col width="20%" />
+  <col width="40%" />
+  <col width="40%" />
+  <caption><%= audit.user.name %> changed the <%= audit.changed_fields %> on <%= audit.timestamp %></caption>
+  <thead>
+    <tr>
+      <th>Field</th>
+      <th>Before</th>
+      <th>After</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% audit.changes.each do |field, change| %>
+    <tr>
+      <td><%= field %></td>
+      <td><%= change[:before] %></td>
+      <td><%= change[:after] %></td>
+    </tr>
+    <% end %>
+  </tbody>
+  </table>
 <% end %>
