--- a/app/views/changes/index.html.erb
+++ b/app/views/changes/index.html.erb
@@ -7,7 +7,7 @@
 <h1>Activities for <%= @appointment.name %> <span class="text-muted"><span class="sr-only">Booking reference </span>#<%= @appointment.id %></span></h1>
 
 <% @audits.each do |audit| %>
-  <table class="table table-striped table-bordered">
+  <table class="table table-striped table-bordered t-changes-table">
   <col width="20%" />
   <col width="40%" />
   <col width="40%" />
@@ -21,7 +21,7 @@
   </thead>
   <tbody>
     <% audit.changes.each do |field, change| %>
-    <tr>
+    <tr class="t-change-row">
       <td><%= field %></td>
       <td><%= change[:before] %></td>
       <td><%= change[:after] %></td>
