--- a/app/assets/stylesheets/components/_loading-spinner.scss
+++ b/app/assets/stylesheets/components/_loading-spinner.scss
@@ -1,8 +1,8 @@
 .loading-spinner {
-  height: 25px;
-  max-width: 50%;
+  height: 12px;
   text-align: center;
-  width: 100px;
+  font-size: 0;
+  display: inline-block;
 }
 
 .loading-spinner__bounce {
@@ -10,8 +10,17 @@
   background-color: $color-black;
   border-radius: 100%;
   display: inline-block;
+  height: 12px;
+  width: 12px;
+}
+
+.loading-spinner--large {
   height: 25px;
-  width: 25px;
+
+  .loading-spinner__bounce {
+    height: 25px;
+    width: 25px;
+  }
 }
 
 .loading-spinner__bounce--1 {
