Display time zone information in customer emails

--- a/app/views/appointment_mailer/cancelled.text.erb
+++ b/app/views/appointment_mailer/cancelled.text.erb
@@ -8,7 +8,7 @@ Date:
 <%= @appointment.start_at.to_date.to_s(:govuk_date) %>
 
 Time:
-<%= @appointment.start_at.to_time.to_s(:govuk_time) %>
+<%= "#{@appointment.start_at.to_time.to_s(:govuk_time)} (#{@appointment.timezone})" %>
 
 Reference number:
 <%= @appointment.id %>
