--- a/app/views/appointment_mailer/cancelled.html.erb
+++ b/app/views/appointment_mailer/cancelled.html.erb
@@ -22,7 +22,7 @@
   Time:
   <br>
   <strong class="emphasize">
-    <%= @appointment.start_at.to_time.to_s(:govuk_time) %>
+    <%= "#{@appointment.start_at.to_time.to_s(:govuk_time)} (#{@appointment.timezone})" %>
   </strong>
 <% end %>
 
