--- a/app/views/appointment_mailer/missed.text.erb
+++ b/app/views/appointment_mailer/missed.text.erb
@@ -9,7 +9,7 @@ Date:
 <%= @appointment.start_at.to_date.to_s(:govuk_date) %>
 
 Time:
-<%= @appointment.start_at.to_time.to_s(:govuk_time) %>
+<%= "#{@appointment.start_at.to_time.to_s(:govuk_time)} (#{@appointment.timezone})" %>
 
 Your phone number:
 <%= @appointment.phone %>
