Allow agents to specify 'where you heard'
Grants agents the ability to specify a value for this option when
creating an appointment.

--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -39,5 +39,12 @@
         class: 't-type-of-appointment-50-54 js-type-of-appointment-50-54'
       %>
     </div>
+
+    <div class="form-group">
+      <%= f.select :where_you_heard,
+            options_for_select(WhereYouHeard::OPTIONS.invert.to_a, @appointment.where_you_heard),
+            {}, { class: 't-where-you-heard form-control' }
+      %>
+    </div>
   </div>
 </div>
