--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -27,6 +27,7 @@
   <%= f.hidden_field :opt_out_of_market_research %>
   <%= f.hidden_field :status %>
   <%= f.hidden_field :type_of_appointment %>
+  <%= f.hidden_field :where_you_heard %>
 
   <div class="t-preview appointment-preview">
     <div class="row">
