--- a/app/views/holidays/new.html.erb
+++ b/app/views/holidays/new.html.erb
@@ -8,5 +8,5 @@
 <h1>Create a holiday</h1>
 
 <%= form_for @holiday, url: batch_create_holidays_path, layout: :basic do |f| %>
-  <%= render 'form', form: f, holiday: @holiday, guider_options: guider_options %>
+  <%= render 'form', form: f, holiday: @holiday, guider_options: guider_options, recurrence: true %>
 <% end %>
