--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -12,9 +12,7 @@
       <h2>Date of birth</h2>
       <%= render 'shared/date_of_birth_form_field', form: f %>
     </div>
-    <div class="col-md-12">
-      <%= render 'availability_calendar', form: f %>
-    </div>
+    <%= render 'schedule_form', form: f %>
   </div>
   <%= render partial: 'personal_details_form', locals: { f: f } %>
   <div class="row form-group">
