Use a more suitable date/time picker
The ranged picker was adding complexity, especially around the binding
and rebinding during validation issues.

--- a/app/views/appointments/_schedule_form.html.erb
+++ b/app/views/appointments/_schedule_form.html.erb
@@ -17,19 +17,7 @@
         <%= form.text_field(
             :ad_hoc_start_at,
             class: 't-ad-hoc-start-at', 
-            data: {
-              module: 'date-range-picker',
-              config: {
-                singleDatePicker: true,
-                timePicker: true,
-                timePickerSeconds: false,
-                timePickerIncrement: 10,
-                autoApply: true,
-                locale: {
-                  format: 'DD/MM/YYYY h:mm A'
-                }
-              }
-            }
+            data: { module: 'date-time-picker' }
           )
         %>
       </div>
