--- a/app/views/shared/_calendar_filter.html.erb
+++ b/app/views/shared/_calendar_filter.html.erb
@@ -3,7 +3,7 @@
   <%=
     select_tag(
       :filter_guiders,
-      grouped_options_for_select(guider_options),
+      grouped_options_for_select(guider_options(current_user)),
       multiple: 'multiple',
       class: 't-users',
       data: { module: 'advanced-select', placeholder: 'Guider or Group' }
