--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -8,5 +8,5 @@
 <h1>Edit holiday</h1>
 
 <%= form_for @holiday, url: batch_upsert_holidays_path(id: params[:id]), layout: :basic do |f| %>
-  <%= render 'form', form: f, holiday: @holiday, guider_options: guider_options, recurrence: false %>
+  <%= render 'form', form: f, holiday: @holiday, guider_options: guider_options(current_user), recurrence: false %>
 <% end %>
