--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,20 @@
   <% render 'shared/navigation' %>
 <% end %>
 
+<% content_for :navbar_right do %>
+  <% if current_user.administrator? %>
+    <%= form_for current_user, html: { class: 'js-organisation-form' } do |f| %>
+      <div class="form-group">
+      <%= f.select :organisation_content_id,
+        options_for_select(organisation_options, current_user.organisation_content_id),
+        { include_blank: true },
+        { class: 't-organisation js-organisation' }
+      %>
+      </div>
+    <% end %>
+  <% end %>
+<% end %>
+
 <% content_for :body_end do %>
   <div data-module="activity-resolve"></div>
   <script>
